--- a/client/src/components/modules/NewPostInput.css
+++ b/client/src/components/modules/NewPostInput.css
@@ -22,7 +22,7 @@
   border: var(--primary) 1px solid;
   border-radius: 0 var(--xs) var(--xs) 0;
   background: none;
-  transition: color 0.1s, background 0.1s;
+  transition: color 0.1s;
 }
 
 .NewPostInput-button:hover {
