--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -16,14 +16,17 @@
 
 /* TODO: REPLACE WITH YOUR OWN FONT! */
 @import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 :root {
-  --primary: #396dff;
+  --primary: #3358ff;
   --primary--dim: #6987db;
   --darkgrey: #d4d4d4;
   --medgrey: #e0e0e0;
   --grey: #f7f7f7;
   --white: #fff;
+  --blue: #adf1fe;
+  --darkblue: #88e3f3;
 
   --xs: 4px;
   --s: 8px;
@@ -34,7 +37,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 300;
 }
 
