--- a/client/src/components/modules/NavBar.css
+++ b/client/src/components/modules/NavBar.css
@@ -1,33 +1,56 @@
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+  
+}
+
 .NavBar-container {
-    padding: var(--s) var(--m);
-    background-color: var(--primary);
+    /*padding: var(--s) var(--m);
+    background-color: var(--primary);*/
+    position: fixed;
+    width: 150px;
+    height: 100%;
+    padding: var(--l) 0px;
+    background-color: var(--darkblue);
+    text-align: center;
   }
   
-  .NavBar-title {
-    color: var(--white);
-    font-size: 20px;
-  }
-  
-  .NavBar-linkContainer {
-    margin-left: var(--l);
-  }
-  
-  .NavBar-link,
-  .NavBar-link:visited {
-    color: var(--white);
-    opacity: 0.6;
-    text-decoration: none;
-  }
-  
-  .NavBar-link:hover {
-    opacity: 0.8;
-  }
-  
-  .NavBar-link.NavBar-login {
-    opacity: 1;
-  }
-  
-  .NavBar-link + .NavBar-link {
-    margin-left: var(--m);
-  }
+.NavBar-title {
+  color: var(--white);
+  font-size: var(--l);
+  margin-bottom: var(--l);
+  background-color: var(--darkblue);
+
+
+}
+
+.NavBar-linkContainer {
+  margin-bottom: var(--l);
+  background-color: var(--darkblue);
+}
+
+.NavBar-link,
+.NavBar-link:visited {
+  color: var(--white);
+  opacity: 0.8;
+  text-decoration: none;
+  background-color: var(--darkblue);
+  /*padding: 15px;
+  border-bottom: 1px solid rgba(0,0,0,0.05);
+  border-top: 1px solid rgba(225,225,225,0.05);*/
+}
+
+.NavBar-link:hover {
+  opacity: 0.8;
+}
+
+.NavBar-link.NavBar-login {
+  opacity: 1;
+}
+
+.NavBar-link + .NavBar-link {
+  /* margin-left: var(--m);*/ 
+  margin-bottom: var(--m);
+}
   
