--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -1,3 +1,30 @@
 * {
     margin-left: 0;
 }
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top: 50px;
+    margin-bottom: var(--l);
+    align-items: baseline;
+
+}
+
+.container .iconGroup {
+    font-size: 30px;
+    
+}
+
+
+
+.container .break {
+    flex-basis: 100%;
+    width: 0;
+}
+
+.container .appname{
+    font-size: 64px;
+    color: #10669F;
+}
