trying to fix stuff

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,3 +1,9 @@
+* {
+    background-color: var(--blue);
+    text-align: center;
+    
+}
+
 .wrapper{
     display: flex;
     /* position: relative;
