--- a/client/src/components/modules/NavBar.css
+++ b/client/src/components/modules/NavBar.css
@@ -28,12 +28,14 @@
 .NavBar-linkContainer {
   margin-bottom: var(--l);
   background-color: var(--darkblue);
+  
 }
 
 .NavBar-link,
 .NavBar-link:visited {
   color: var(--white);
   opacity: 0.8;
+  display: block;
   text-decoration: none;
   background-color: var(--darkblue);
   /*padding: 15px;
