home page styling

--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -1,30 +1,50 @@
-* {
-    margin-left: 0;
-}
-
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    margin-top: 50px;
-    margin-bottom: var(--l);
-    align-items: baseline;
-
-}
-
-.container .iconGroup {
-    font-size: 30px;
+.Home-container {
+    min-height: 100vh;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    grid-template-areas:
+        "requests   requests    profile  profile"
+        ".          logo        logo     .      "
+        "incoming   incoming    deck     deck   ";
     
 }
 
-
-
-.container .break {
-    flex-basis: 100%;
-    width: 0;
+.Home-requestGroup {
+    grid-area: requests;
 }
 
-.container .appname{
+.Home-profileGroup {
+    grid-area: profile;
+}
+
+.Home-incomingGroup {
+    grid-area: incoming;
+}
+
+.Home-deckGroup {
+    grid-area: deck;
+}
+
+.Home-topIcons {
+    padding-top: 8vh;
+}
+
+.Home-bottomIcons {
+    padding-bottom: 8vh;
+}
+
+.Home-logoText {
+    grid-area: logo;
     font-size: 64px;
     color: #10669F;
-}
+    background-color: none;
+    justify-self: center;
+    align-self: center;
+}    
+
+.Home-iconLabels {
+    font-size: 30px;
+    display: flex;
+    flex-direction: column;
+}    
