--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -8,7 +8,6 @@
         "requests   requests    profile  profile"
         ".          logo        logo     .      "
         "incoming   incoming    deck     deck   ";
-    
 }
 
 .Home-requestGroup {
@@ -44,8 +43,9 @@
     align-self: center;
 }    
 
-.Home-iconLabels {
+.Home-iconText {
     font-size: 30px;
     display: flex;
     flex-direction: column;
-}    
+    color: var(--primary--dim);
+}
