--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -27,11 +27,19 @@
 }
 
 .Home-topIcons {
-    padding-top: 8vh;
+    padding-top: 20%;
 }
 
 .Home-bottomIcons {
-    padding-bottom: 8vh;
+    padding-bottom: 20%;
+}
+
+.Home-leftIcons {
+    padding-left: 3vw;    
+}
+
+.Home-rightIcons {
+    padding-right: 3vw;
 }
 
 .Home-logoText {
@@ -48,4 +56,8 @@
     display: flex;
     flex-direction: column;
     color: var(--primary--dim);
+}
+
+img {
+    max-height: 30vh;
 }
