--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -3,11 +3,13 @@
     display: grid;
     text-align: center;
     grid-template-columns: auto;
-    grid-template-rows: auto;
+    grid-template-rows: 40vh 10vh 40vh;
     grid-template-areas:
         "requests   requests    profile  profile"
         ".          logo        logo     .      "
         "incoming   incoming    deck     deck   ";
+    column-gap: 5vw;
+    row-gap: 5vh;
 }
 
 .Home-requestGroup {
@@ -26,19 +28,25 @@
     grid-area: deck;
 }
 
-.Home-topIcons {
-    padding-top: 20%;
+.Home-topWrapper {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-.Home-bottomIcons {
-    padding-bottom: 20%;
+.Home-topGroup {
+    padding-top: 8vh;
+}
+.Home-bottomGroup {
+    padding-bottom: 8vh;
 }
 
-.Home-leftIcons {
+.Home-leftGroup {
     padding-left: 3vw;    
 }
 
-.Home-rightIcons {
+.Home-rightGroup {
     padding-right: 3vw;
 }
 
@@ -51,13 +59,24 @@
     align-self: center;
 }    
 
-.Home-iconText {
+.Home-iconTextTop {
     font-size: 30px;
     display: flex;
     flex-direction: column;
     color: var(--primary--dim);
+    height: 30%;
+    justify-content: flex-end;
 }
 
-img {
-    max-height: 30vh;
+.Home-iconTextBottom {
+    font-size: 30px;
+    display: flex;
+    flex-direction: column;
+    color: var(--primary--dim);
+    height: 30%;
+    justify-content: flex-start;
+}
+
+.Home-icon {
+    height: 70%;
 }
