--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -3,7 +3,7 @@
     display: grid;
     text-align: center;
     grid-template-columns: auto;
-    grid-template-rows: 40vh 10vh 40vh;
+    grid-template-rows: 42vh 6vh 42vh;
     grid-template-areas:
         "requests   requests    profile  profile"
         ".          logo        logo     .      "
@@ -43,11 +43,11 @@
 }
 
 .Home-leftGroup {
-    padding-left: 3vw;    
+    padding-left: 5vw;    
 }
 
 .Home-rightGroup {
-    padding-right: 3vw;
+    padding-right: 5vw;
 }
 
 .Home-logoText {
@@ -59,24 +59,19 @@
     align-self: center;
 }    
 
-.Home-iconTextTop {
+.Home-iconText {
     font-size: 30px;
     display: flex;
     flex-direction: column;
-    color: var(--primary--dim);
-    height: 30%;
-    justify-content: flex-end;
+    height: 20%;
 }
 
-.Home-iconTextBottom {
-    font-size: 30px;
-    display: flex;
-    flex-direction: column;
-    color: var(--primary--dim);
-    height: 30%;
-    justify-content: flex-start;
+.Home-iconWrapper {
+    height: 100%;
+    width: 100%;
 }
 
 .Home-icon {
-    height: 70%;
+    height: 100%;
+    max-width: 100%;
 }
