--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -3,11 +3,11 @@
     display: grid;
     text-align: center;
     grid-template-columns: auto;
-    grid-template-rows: 42vh 6vh 42vh;
+    grid-template-rows: 38vh 5vh 47vh;
     grid-template-areas:
-        "requests   requests    profile  profile"
-        ".          logo        logo     .      "
-        "incoming   incoming    deck     deck   ";
+        "requests    profile"
+        "logo        logo   "
+        "incoming    deck   ";
     column-gap: 5vw;
     row-gap: 5vh;
 }
@@ -36,10 +36,10 @@
 }
 
 .Home-topGroup {
-    padding-top: 8vh;
+    padding-top: 5vh;
 }
 .Home-bottomGroup {
-    padding-bottom: 8vh;
+    padding-bottom: 5vh;
 }
 
 .Home-leftGroup {
@@ -63,12 +63,26 @@
     font-size: 30px;
     display: flex;
     flex-direction: column;
-    height: 20%;
+    height: 30%;
+}
+
+.Home-iconTextBottom {
+    padding-top: 3%;
+}
+
+.Home-iconWrapperTopL {
+    height: 70%;
+    max-width: 80%;
+}
+
+.Home-iconWrapperTopR {
+    height: 70%;
+    max-width: 69%;
 }
 
 .Home-iconWrapper {
-    height: 100%;
-    width: 100%;
+    height: 70%;
+    max-width: 80%;
 }
 
 .Home-icon {
