--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -57,22 +57,23 @@
     background-color: none;
     justify-self: center;
     align-self: center;
+    text-shadow: 2px 2px var(--primary--dim);
 }    
 
 .Home-iconText {
     font-size: 30px;
     display: flex;
     flex-direction: column;
-    height: 30%;
+    height: 28%;
 }
 
 .Home-iconTextBottom {
-    padding-top: 3%;
+    padding-top: 2%;
 }
 
 .Home-iconWrapperTopL {
-    height: 70%;
-    max-width: 80%;
+    height: 72%;
+    max-width: 75%;
 }
 
 .Home-iconWrapperTopR {
