--- a/client/src/components/modules/NavBar.css
+++ b/client/src/components/modules/NavBar.css
@@ -2,57 +2,28 @@
   margin:0;
   padding:0;
   box-sizing: border-box;
-  
 }
 
-.NavBar-container {
-    /*padding: var(--s) var(--m);
-    background-color: var(--primary);*/
-    position: fixed;
-    width: 150px;
-    height: 100%;
-    padding: var(--l) 0px;
-    background-color: var(--darkblue);
-    text-align: center;
-  }
-  
-.NavBar-title {
-  color: var(--white);
-  font-size: var(--l);
-  margin-bottom: var(--l);
-  background-color: var(--darkblue);
-
-
+.NavBar-iconGroup {
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.NavBar-linkContainer {
-  margin-bottom: var(--l);
-  background-color: var(--darkblue);
-  
+.NavBar-iconGroup:hover {
+  text-shadow: var(--white) 1px 0px 10px;
 }
 
-.NavBar-link,
-.NavBar-link:visited {
-  color: var(--white);
-  opacity: 0.8;
-  display: block;
-  text-decoration: none;
-  background-color: var(--darkblue);
-  /*padding: 15px;
-  border-bottom: 1px solid rgba(0,0,0,0.05);
-  border-top: 1px solid rgba(225,225,225,0.05);*/
+.NavBar-icon {
+  max-width: 80%;
 }
 
-.NavBar-link:hover {
-  opacity: 0.8;
+.NavBar-logo {
+  font-size: var(--xl);
+  color: #10669F;
+  text-shadow: var(--primary--dim) 1px 0 10px;  
+  padding: 8% 0;
 }
 
-.NavBar-link.NavBar-login {
-  opacity: 1;
-}
-
-.NavBar-link + .NavBar-link {
-  /* margin-left: var(--m);*/ 
-  margin-bottom: var(--m);
-}
   
