--- a/client/src/components/modules/Musicard.css
+++ b/client/src/components/modules/Musicard.css
@@ -5,7 +5,7 @@
   width: 400px;
   text-align: center;
   margin: var(--m);
-  box-shadow: 3px 5px 10px#1e8fc7;
+  box-shadow: 3px 5px 10p var(--blueshadow);
   align-items: center;
   padding: var(--l);
 }
@@ -27,12 +27,12 @@
   margin-top: var(--m);
   background-color: var(--white);
   font-size: 24px;
-  color: #999999;
+  color: var(--greyfade);
 }
 
 .Musicard-album {
   background-color: var(--white);
-  color: #999999;
+  color: var(--greyfade);
   white-space: nowrap;
 }
 
