--- a/client/src/components/modules/IncomingCard.css
+++ b/client/src/components/modules/IncomingCard.css
@@ -1,16 +1,19 @@
 .IncomingCard-container {
   border: var(--darkgrey) 1px solid;
-  border-radius: var(--xs);
+  border-radius: var(--m);
   margin-top: var(--m);
+  background: white;
+  
 }
 
 .IncomingCard-container:first-of-type {
   margin-top: var(--l);
 }
 
-.IncomingCard-story {
-  padding: var(--m) var(--l);
+.Incoming-text {
+  padding: var(--l);
 }
+
 
 .IncomingCard-storyUser {
   font-size: 20px;
@@ -19,15 +22,33 @@
 
 .IncomingCard-storyContent {
   font-size: 20px;
-  margin: var(--s) 0 0;
 }
 
 .IncomingCard-commentSection {
   background-color: var(--grey);
   border-top: 1px solid var(--darkgrey);
+  border-bottom-left-radius: var(--m);
+  border-bottom-right-radius: var(--m);
   padding: var(--s) 0;
 }
 
 .IncomingCard-commentBody {
   margin: 0 0 var(--s);
+}
+
+.Incoming-button {
+  border-radius: var(--s);
+  margin: var(--xs);
+  height: 40%;
+  width: 100%;
+  border: none;
+  padding: var(--s);
+}
+
+.Incoming-declineButton {
+  background: #ff9191;
+}
+
+.Incoming-addButton {
+  background: #6bffae;
 }
