--- a/client/src/components/modules/IncomingCard.css
+++ b/client/src/components/modules/IncomingCard.css
@@ -14,6 +14,11 @@
   padding: var(--l);
 }
 
+.Incoming-buttonholder {
+  width: 22%;
+  margin-right: var(--m);
+}
+
 
 .IncomingCard-storyUser {
   font-size: 20px;
@@ -38,11 +43,13 @@
 
 .Incoming-button {
   border-radius: var(--s);
-  margin: var(--xs);
-  height: 40%;
+  margin-left: var(--m);
+  margin-bottom: var(--s);
+  height: 50%;
   width: 100%;
   border: none;
   padding: var(--s);
+  font-size: 16px;
 }
 
 .Incoming-declineButton {
