--- a/client/src/components/modules/SingleIncomingRate.css
+++ b/client/src/components/modules/SingleIncomingRate.css
@@ -8,7 +8,7 @@
 }
 
 .Incoming-RequestedInfo {
-  margin-bottom: var(--s);
+  margin-bottom: var(--m);
   color: var(--greyfade);
-  font-size: 18px;
+  font-size: 16px;
 }
