--- a/client/src/components/modules/NewRequestInput.css
+++ b/client/src/components/modules/NewRequestInput.css
@@ -1,6 +1,5 @@
 .NewPostInput-input,
 .NewPostInput-button {
-  font-family: "Open Sans";
   font-size: 14px;
   padding: var(--s) var(--m);
 }
@@ -8,8 +7,9 @@
 .NewPostInput-input {
   flex-grow: 1;
   border: var(--darkgrey) 1px solid;
-  border-radius: var(--xs) 0 0 var(--xs);
+  border-radius: var(--s);
   transition: box-shadow 0.1s;
+  margin: var(--s);
 }
 
 .NewPostInput-input:focus-within {
@@ -20,7 +20,7 @@
 .NewPostInput-button {
   color: var(--primary);
   border: var(--primary) 1px solid;
-  border-radius: 0 var(--xs) var(--xs) 0;
+  border-radius: var(--m);
   background: none;
   transition: color 0.1s;
 }
@@ -28,4 +28,15 @@
 .NewPostInput-button:hover {
   color: var(--white);
   background-color: var(--primary);
+}
+.NewRequest-main {
+  width: 100%;
+  color: #555555;
+  justify-content: center;
+  margin-bottom: var(--xl);
+}
+
+.NewRequest-text {
+  font-size: 20px;
+  margin: var(--s);
 }
