--- a/client/src/components/modules/RequestCard.css
+++ b/client/src/components/modules/RequestCard.css
@@ -3,6 +3,7 @@
   border-radius: var(--xs);
   margin-top: var(--m);
   background-color: var(--white);
+  text-align: left;
 }
 
 .RequestCard-container:first-of-type {
