--- a/client/src/components/modules/Modal.css
+++ b/client/src/components/modules/Modal.css
@@ -4,7 +4,8 @@
     left: 0;
     width:100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.6) !important;
+    z-index: 100;
   }
   
   .modal-main {
