requests page snazz

--- a/client/src/components/modules/RequestCard.css
+++ b/client/src/components/modules/RequestCard.css
@@ -4,9 +4,7 @@
   margin-top: var(--m);
   background-color: var(--white);
   text-align: left;
-  align-items: stretch;
-  display:flex;
-  
+  display: flex;
 }
 
 .RequestCard-container:first-of-type {
@@ -15,7 +13,7 @@
 
 .RequestCard-story,
 .RequestCard-commentSection {
-  padding: var(--m) var(--l);
+  padding: var(--m) 0 var(--m) var(--l);
 }
 
 .RequestCard-storyUser {
@@ -43,7 +41,7 @@
 
 .RequestCard-tradeSection {
   text-align: center;
-  padding: var(--s);
+  padding: var(--m) var(--l) var(--m) var(--s);
   width: 20%;
   justify-content: center;
 }
@@ -65,8 +63,8 @@
 .Request-tradeButton {
   cursor: pointer;
   border-radius: var(--s);
-  height: 85%;
-  width: 80%;
+  height: 100%;
+  width: 100%;
   border: none;
   padding: var(--s);
   background-color: var(--bluemed);
@@ -75,31 +73,31 @@
 
 }
 
+.RequestCard-chosenSongSection {
+  height: 50%;
+}
+
 .RequestCard-buttongroup {
-  align-items: center;
+  display: flex;
+  flex-direction: column;
   justify-content: space-around;
-  display:flex;
+  align-items: center;
+  height: 50%;
+}
+
+.RequestCard-cancelConfirm {
+  cursor: pointer;
+  border-radius: var(--s);
+  border: none;
+  width: 100%;
+  padding: var(--m);
+  font-size: 15px;
 }
 
 .RequestCard-cancel {
-  margin-top: var(--l);
-  margin-right: var(--s);
-  cursor: pointer;
-  border-radius: var(--s);
-  border: none;
-  padding: var(--s);
   background-color: #ff9191;
-  padding: var(--m);
-  font-size: 15px;
 }
 
 .RequestCard-confirm {
-  margin-top: var(--l);
-  cursor: pointer;
-  border-radius: var(--s);
-  border: none;
-  padding: var(--s);
   background-color: #6bffae;
-  padding: var(--m);
-  font-size: 15px;
 }
