--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -15,8 +15,9 @@
 */
 
 /* TODO: REPLACE WITH YOUR OWN FONT! */
-@import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@400;700&display=swap');
 
 :root {
   --primary: #3358ff;
@@ -42,12 +43,16 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 300;
 }
 
 form {
   flex-grow: 1;
+}
+
+.u-logofont {
+  font-family: 'Balsamiq Sans', cursive;
 }
 
 .u-flex {
