--- a/client/src/components/modules/RequestCard.css
+++ b/client/src/components/modules/RequestCard.css
@@ -62,14 +62,19 @@
 
 .Request-tradeButton {
   cursor: pointer;
-  border-radius: var(--s);
-  border: 2px solid #E58282;
+  border-radius: var(--l);
+  border: 6px solid #7ACCDA;
   height: 100%;
   width: 100%;
-  border: none;
   background-color: white;
-  padding: var(--m);
-  font-size: 18px;
+  font-size: 20px;
+  font-weight: 600;
+  color: #7ACCDA;
+}
+
+.Request-tradeButton:hover {
+  background-color: #7ACCDA;
+  color: white;
 }
 
 .RequestCard-chosenSongSection {
@@ -86,7 +91,7 @@
 
 .RequestCard-cancelConfirm {
   cursor: pointer;
-  border-radius: var(--s);
+  border-radius: var(--m);
   border: 1px solid #000000;
   width: 100%;
   height: 46%;
