--- a/client/src/components/modules/Modal.css
+++ b/client/src/components/modules/Modal.css
@@ -8,6 +8,11 @@
     z-index: 100;
   }
   
+
+  .modal-title {
+    margin-bottom: var(--m);
+  }
+  
   .modal-main {
     position:fixed;
     background: white;
@@ -17,7 +22,7 @@
     border-radius: var(--l);
     border-width: 5px;
     height: auto;
-    top:25%;
+    top:33%;
     left:50%;
     transform: translate(-50%,-50%);
   }
@@ -30,4 +35,39 @@
     display: none;
   }
 
+  .modal-button {
+    margin-top: var(--s);
+    cursor: pointer;
+    border-radius: var(--s);
+    border: 1px solid #000000;
+    width: 40%;
+    height: 40px;
+    font-size: 15px;
+    font-weight: 600;
+  }
+
+  .modal-okbutton {
+    background-color: white;
+    border: 2px solid #60E59C;
+    color: #60E59C;
+  }
+
+  .modal-cancelbutton {
+    background-color: white;
+    border: 2px solid #E58282;
+    color: #E58282;
+    margin-right: var(--m);
+  }
+
+
+  
+  .modal-okbutton:hover {
+    background-color: #60E59C;
+    color: white;
+  }
+  
+  .modal-cancelbutton:hover {
+    background-color: #E58282;
+    color: white;
+  }
   
