--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -18,6 +18,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap');
 
 :root {
   --primary: #3358ff;
@@ -52,7 +53,7 @@ form {
 }
 
 .u-logofont {
-  font-family: 'Balsamiq Sans', cursive;
+  font-family: 'Inter', sans-serif;
 }
 
 .u-flex {
