--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -33,6 +33,8 @@
   --blueshadow: #1e8fc7;
   --bluebright: #00a2ff;
   --greyfade: #999999;
+  --red--dim: #E58282;
+  --red--dark: #D05353;
 
   --xs: 4px;
   --s: 8px;
@@ -46,6 +48,10 @@ body {
   padding: 0;
   font-family: 'Montserrat', sans-serif;
   font-weight: 300;
+}
+
+button {
+  font-family: 'Montserrat', sans-serif;
 }
 
 form {
@@ -123,9 +129,8 @@ form {
 }
 
 .u-pageTitle {
-  margin-bottom: var(--l);
-  color: var(--primary);
-  font-size: 48px;
+  margin-bottom: var(--xl);
+  font-size: 72px;
 }
 
 .u-pageDescription {
@@ -161,3 +166,65 @@ form {
   margin-bottom: var(--xl);
   cursor: pointer;
 }
+/*
+ * 3d shadow pop effect inspired by https://css-tricks.com/3d-text-tower/
+ */
+
+.u-shadowPop { 
+  color: white;
+  top: 0;
+  left: 0;
+  -webkit-transition: all 0.12s ease;
+  -moz-transition:    all 0.12s ease;
+  -ms-transition:     all 0.12s ease;
+  -o-transition:      all 0.12s ease;
+  transition:      all 0.2s ease;
+}
+
+.u-shadowPop:hover {
+  position: relative; 
+  top: -24px; 
+  left: -24px;
+}
+
+.u-shadowPopBlue { 
+  text-shadow: 8px 8px #03d0f7, 
+               16px 16px #03c0e4, 
+               24px 24px #03b0d1;
+}
+
+.u-shadowPopBlue:hover {
+  text-shadow: 8px 8px   #03d0f7, 
+               16px 16px #03c0e4, 
+               24px 24px #03b0d1,
+               32px 32px #029fbd, 
+               40px 40px #028faa;
+}
+
+.u-shadowPopPink { 
+  text-shadow: 8px 8px #f6d9fc, 
+               16px 16px #ddc3e2, 
+               24px 24px #c4adc9;
+}
+
+.u-shadowPopPink:hover {
+  text-shadow: 8px 8px   #f6d9fc, 
+               16px 16px #ddc3e2, 
+               24px 24px #c4adc9,
+               32px 32px #ac97b0, 
+               40px 40px #938297;
+} 
+
+.u-shadowPopPurple { 
+  text-shadow: 8px 8px #03d0f7, 
+               16px 16px #03c0e4, 
+               24px 24px #03b0d1;
+}
+
+.u-shadowPopPurple:hover {
+  text-shadow: 8px 8px   #03d0f7, 
+               16px 16px #03c0e4, 
+               24px 24px #03b0d1,
+               32px 32px #029fbd, 
+               40px 40px #028faa;
+} 
