--- a/client/src/components/modules/MusicPreview.css
+++ b/client/src/components/modules/MusicPreview.css
@@ -1,9 +1,3 @@
-.MusicPreview-img {
-  background-color: black;
-  border-radius: var(--l);
-  max-width: 100%;
-}
-
 .MusicPreview-imgContainer {
   border: var(--darkgrey) 1px solid;
   border-radius: var(--l);
@@ -15,14 +9,38 @@
   cursor: pointer;
 }
 
-.MusicPreview-imgContainer:hover .MusicPreview-playButton {
-  opacity: 100%;
-  width: 40%;
-  top: 25%;
+.MusicPreview-img {
+  opacity: 90%;
+  background-color: var(--darkgrey);
+  border-radius: var(--l);
+  max-width: 100%;
+  box-shadow: 2px 2px 10px var(--darkgrey);
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
-.MusicPreview-playButton {
-  transition: opacity 0.2s ease, width 0.2s ease, top 0.2s ease;
+.MusicPreview-imgContainer:hover .MusicPreview-img {
+  opacity: 100%;
+  box-shadow: 5px 5px 10px var(--darkgrey);
+  -webkit-transform: scale(1.01); 
+  -moz-transform:    scale(1.01);
+  -ms-transform:     scale(1.01); 
+  -o-transform:      scale(1.01);
+  transform: scale(1.1);
+}
+
+.MusicPreview-imgContainer:hover .MusicPreview-playButton, .MusicPreview-imgContainer:hover .MusicPreview-addButton {
+  opacity: 100%;
+  -webkit-transform: scale(1.2); 
+  -moz-transform:    scale(1.2);
+  -ms-transform:     scale(1.2); 
+  -o-transform:      scale(1.2);
+  transform: scale(1.2);
+}
+
+
+
+.MusicPreview-playButton, .MusicPreview-addButton {
+  transition: opacity 0.12s ease, transform 0.12s ease;
   opacity: 70%;
   text-shadow: 10px;
   position: absolute;
