--- a/client/src/components/modules/Modal.css
+++ b/client/src/components/modules/Modal.css
@@ -1,73 +1,75 @@
 .modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width:100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.6) !important;
-    z-index: 100;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width:100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6) !important;
+  z-index: 100;
+}
   
 
-  .modal-title {
-    margin-bottom: var(--m);
-  }
-  
-  .modal-main {
-    position:fixed;
-    background: white;
-    width: 60%;
-    padding: var(--l);
-    border-color: var(--greyfade);
-    border-radius: var(--l);
-    border-width: 5px;
-    height: auto;
-    top:33%;
-    left:50%;
-    transform: translate(-50%,-50%);
-  }
-  
-  .display-block {
-    display: block;
-  }
-  
-  .display-none {
-    display: none;
-  }
+.modal-title {
+  margin-bottom: var(--m);
+}
 
-  .modal-button {
-    margin-top: var(--s);
-    cursor: pointer;
-    border-radius: var(--s);
-    border: 1px solid #000000;
-    width: 40%;
-    height: 40px;
-    font-size: 15px;
-    font-weight: 600;
-  }
+.modal-main {
+  position:fixed;
+  background: white;
+  width: 60%;
+  padding: var(--l);
+  border-color: var(--greyfade);
+  border-radius: var(--l);
+  border-width: 5px;
+  height: auto;
+  top:33%;
+  left:50%;
+  transform: translate(-50%,-50%);
+}
 
-  .modal-okbutton {
-    background-color: white;
-    border: 2px solid #60E59C;
-    color: #60E59C;
-  }
+.display-block {
+  display: block;
+}
 
-  .modal-cancelbutton {
-    background-color: white;
-    border: 2px solid #E58282;
-    color: #E58282;
-    margin-right: var(--m);
-  }
+.display-none {
+  display: none;
+}
 
+.modal-button {
+  margin-top: var(--s);
+  cursor: pointer;
+  border-radius: var(--s);
+  border: 1px solid #000000;
+  width: 40%;
+  height: 40px;
+  font-size: 15px;
+  font-weight: 600;
+}
 
-  
-  .modal-okbutton:hover {
-    background-color: #60E59C;
-    color: white;
-  }
-  
-  .modal-cancelbutton:hover {
-    background-color: #E58282;
-    color: white;
-  }
-  
+.modal-okbutton {
+  background-color: white;
+  border: 2px solid #60E59C;
+  color: #60E59C;
+}
+
+.modal-cancelbutton {
+  background-color: white;
+  border: 2px solid #E58282;
+  color: #E58282;
+  margin-right: var(--m);
+}
+
+.modal-okbutton:hover {
+  background-color: #60E59C;
+  color: white;
+}
+
+.modal-cancelbutton:hover {
+  background-color: #E58282;
+  color: white;
+}
+
+.modal-selectTrackText {
+  font-size: 20px;
+  margin-bottom: 3%;
+}
