--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -125,7 +125,7 @@ form {
   max-width: 960px;
   padding: calc(2 * var(--xl) - 6px) var(--m);
   margin: auto;
-  text-align:center;
+  text-align: center;
 }
 
 .u-pageTitle {
@@ -149,7 +149,7 @@ form {
   padding: var(--m);
   font-size: 18px;
   color: #555555;
-  margin: var(--l) 0;
+  margin: var(--l) 0 var(--l) auto;
   cursor: pointer;
 }
 
