--- a/client/src/components/modules/Musicard.css
+++ b/client/src/components/modules/Musicard.css
@@ -5,13 +5,14 @@
   width: 30%;
   text-align: center;
   margin: var(--s);
-  box-shadow: 3px 5px 10px var(--blueshadow);
   align-items: center;
   padding: var(--l);
-  transition: transform 0.2s ease;
+  box-shadow: 2px 2px 10px var(--blueshadow);
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
 .Musicard-container:hover {
+  box-shadow: 3px 3px 20px var(--blueshadow);
   -webkit-transform: scale(1.03); 
   -moz-transform:    scale(1.03);
   -ms-transform:     scale(1.03); 
