--- a/client/src/components/modules/NavBar.css
+++ b/client/src/components/modules/NavBar.css
@@ -21,10 +21,10 @@
 
 .NavBar-logo {
   font-size: var(--xl);
-  color: var(--primary);
-  text-shadow: var(--bluebright) 1px 0 10px;  
-  padding: 8% 0;
+  padding: 5% 0;
+  margin-bottom: 5%;
   text-align: center;
+  text-decoration: none;
 }
 
   
