--- a/client/src/components/pages/Deck.css
+++ b/client/src/components/pages/Deck.css
@@ -5,3 +5,23 @@
     justify-content: center;
 }
 
+.Deck-populateButton {
+    border-radius: var(--l);
+    height: 40%;
+    border: none;
+    padding: var(--s);
+    background-color: var(--bluemed);
+    padding: var(--l);
+    font-size: 18px;
+    font-weight: 600;
+    color: #555555;
+    margin: var(--l) 0 var(--l) auto;
+    cursor: pointer;    
+}
+
+.Deck-populateText {
+    font-size: 20px;
+    font-weight: 600;
+    color: #555555;
+    margin-top: var(--m);
+}
