--- a/client/src/components/modules/ModalSelectTrack.css
+++ b/client/src/components/modules/ModalSelectTrack.css
@@ -3,6 +3,12 @@
   margin-bottom: 3%;
 }
 
+.modalselectTrack-subtext {
+  font-size: 16px;
+  margin-bottom: 3%;
+}
+
+
 .modalSelectTrack-selectBar {
   padding: 2% 3% 5% 3%;
 }
