small adjustment to home modal css

--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -253,6 +253,7 @@
 .Home-modalText {
     text-align: center;
     align-items: center;
+    padding: var(--s);
 }
 .Home-modalTextIntro {
     font-size: 18px;
