--- a/client/src/components/modules/Modal.css
+++ b/client/src/components/modules/Modal.css
@@ -46,6 +46,19 @@
   font-weight: 600;
 }
 
+.modal-buttonLong {
+  margin-top: var(--s);
+  cursor: pointer;
+  border-radius: var(--s);
+  border: 1px solid #000000;
+  width: 80%;
+  height: 40px;
+  font-size: 15px;
+  font-weight: 600;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
 .modal-okbutton {
   background-color: white;
   border: 2px solid #60E59C;
