modal on incoming

--- a/client/src/components/modules/IncomingCard.css
+++ b/client/src/components/modules/IncomingCard.css
@@ -74,3 +74,13 @@
   background-color: #E58282;
   color: white;
 }
+
+.incoming-wrapReceivedText {
+  display: inline;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.incoming-wrapReceivedText:hover {
+  color: var(--blue--dim);
+}
