--- a/client/src/components/modules/IncomingCard.css
+++ b/client/src/components/modules/IncomingCard.css
@@ -84,3 +84,23 @@
 .incoming-wrapReceivedText:hover {
   color: var(--blue--dim);
 }
+
+.IncomingCard-ModalContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 0 3% 0;
+}
+
+.IncomingCard-ModalText {
+  font-size: 24px;
+  margin-bottom: 2%;
+  text-align: center;
+}
+
+.IncomingCard-ModalSubtitle {
+  font-size: 18px;
+  margin-bottom: 2%;
+  text-align: center;
+  padding: 0 8%;
+}
