--- a/client/src/components/modules/Musicard.css
+++ b/client/src/components/modules/Musicard.css
@@ -44,7 +44,8 @@
 .Musicard-title a {
   text-decoration: none;
   font-size: 140%;
-  color: var(--black);
+  font-weight: 600;
+  color: var(--primary);
 }
 
 .Musicard-title:hover {
