--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -21,7 +21,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap');
 
 :root {
-  --primary: #3358ff;
+  --primaryold: #3358ff;
+  --primary: #00a6ff;
   --primary--dim: #6987db;
   --darkgrey: #d4d4d4;
   --medgrey: #e0e0e0;
